// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Global.Utility.Pagination component renders correctly 1`] = `
<nav
  className="list-pagination"
>
  <ul
    className="list-pagination__columns"
  >
    <li
      className="list-pagination__column"
    >
      <ul>
        <li
          className="list-pagination__page list-pagination__page--prev list-pagination__page--disabled"
        >
          <a
            disabled={true}
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <svg
              aria-hidden={true}
              className="manicon-svg svg-icon--arrowLongLeft16"
              fill="currentColor"
              height={null}
              viewBox="0 0 24 16"
              width={null}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.9210555,8.50098377 L2,8.50098377 L2,7.49848233 L19.9183709,7.49848233 L14.6653905,2.76142495 L15.3486096,2 L22.0012062,7.99920999 L15.3651285,14 L14.6808716,13.2395122 L19.9210555,8.50098377 Z"
                transform="rotate(180 12 8)"
              />
            </svg>
            <span
              className="list-pagination__icon-label"
            >
              PREV
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="list-pagination__column-middle"
    >
      <ul
        className="list-pagination__pages"
      >
        <li
          className="list-pagination__page list-pagination__page--ordinal list-pagination__page--disabled"
        >
          <a
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <span
              aria-hidden="true"
            >
              1
            </span>
            <span
              className="screen-reader-text"
            >
              Go to page: 
              1
            </span>
          </a>
        </li>
        <li
          className="list-pagination__page list-pagination__page--ordinal"
        >
          <a
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <span
              aria-hidden="true"
            >
              2
            </span>
            <span
              className="screen-reader-text"
            >
              Go to page: 
              2
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="list-pagination__column"
    >
      <ul>
        <li
          className="list-pagination__page list-pagination__page--next"
        >
          <a
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <span
              className="list-pagination__icon-label"
            >
              NEXT
            </span>
            <svg
              aria-hidden={true}
              className="manicon-svg svg-icon--arrowLongRight16"
              fill="currentColor"
              height={null}
              viewBox="0 0 24 16"
              width={null}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.9210555,8.50098377 L2,8.50098377 L2,7.49848233 L19.9183709,7.49848233 L14.6653905,2.76142495 L15.3486096,2 L22.0012062,7.99920999 L15.3651285,14 L14.6808716,13.2395122 L19.9210555,8.50098377 Z"
              />
            </svg>
          </a>
        </li>
      </ul>
    </li>
  </ul>
</nav>
`;

exports[`Global.Utility.Pagination component renders correctly when compact style 1`] = `
<nav
  className="list-pagination list-pagination--compact"
>
  <ul
    className="list-pagination__columns"
  >
    <li
      className="list-pagination__column"
    >
      <ul>
        <li
          className="list-pagination__page list-pagination__page--prev list-pagination__page--disabled"
        >
          <a
            disabled={true}
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <svg
              aria-hidden={true}
              className="manicon-svg svg-icon--arrowLongLeft16"
              fill="currentColor"
              height={null}
              viewBox="0 0 24 16"
              width={null}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.9210555,8.50098377 L2,8.50098377 L2,7.49848233 L19.9183709,7.49848233 L14.6653905,2.76142495 L15.3486096,2 L22.0012062,7.99920999 L15.3651285,14 L14.6808716,13.2395122 L19.9210555,8.50098377 Z"
                transform="rotate(180 12 8)"
              />
            </svg>
            <span
              className="list-pagination__icon-label"
            >
              PREV
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="list-pagination__column-middle"
    >
      <ul
        className="list-pagination__pages"
      >
        <li>
          <span>
            Page
            1
             
            /
             
            2
          </span>
        </li>
      </ul>
    </li>
    <li
      className="list-pagination__column"
    >
      <ul>
        <li
          className="list-pagination__page list-pagination__page--next"
        >
          <a
            href="#pagination-target"
            onClick={[MockFunction]}
          >
            <span
              className="list-pagination__icon-label"
            >
              NEXT
            </span>
            <svg
              aria-hidden={true}
              className="manicon-svg svg-icon--arrowLongRight16"
              fill="currentColor"
              height={null}
              viewBox="0 0 24 16"
              width={null}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.9210555,8.50098377 L2,8.50098377 L2,7.49848233 L19.9183709,7.49848233 L14.6653905,2.76142495 L15.3486096,2 L22.0012062,7.99920999 L15.3651285,14 L14.6808716,13.2395122 L19.9210555,8.50098377 Z"
              />
            </svg>
          </a>
        </li>
      </ul>
    </li>
  </ul>
</nav>
`;

exports[`Global.Utility.Pagination component renders null without pagination props 1`] = `null`;
